# erpnext-mcp

./: .dockerignore  .env.example  .env.prod  .gitignore  Caddyfile  Dockerfile  README.md  config.example.json  config_prod.json  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  test_fuzz.py  test_remote.py
src/erpnext_mcp/: admin.html  client.py  server.py
