[project]
name = "erpnext-mcp"
version = "0.1.0"
description = "MCP server for interacting with ERPNext"
authors = [
    { name = "Developer" }
]
dependencies = [
    "mcp>=1.0.0,<2.0.0",
    "httpx>=0.27.0,<1.0.0",
    "uvicorn>=0.30.0,<1.0.0",
    "starlette>=0.38.0,<1.0.0",
    "sse-starlette>=2.1.3,<3.0.0",
    "tenacity>=9.0.0,<10.0.0"
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
erpnext-mcp = "erpnext_mcp.server:main"
